--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,9 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  position: relative;
+  
+  
 }
 .log {
   color: #2e2f42;
@@ -56,11 +59,13 @@ a {
 .adres {
   font-style: normal;
   margin-left: auto;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adlink_ {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adlink_:hover,
 .adlink_:focus {
@@ -70,6 +75,12 @@ a {
   background-color: #2e2f42;
   color: #ffffff;
   padding: 188px 0;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office.jpg);
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+
 }
 .h_one {
   max-width: 496px;
@@ -95,7 +106,7 @@ a {
   color: #ffffff;
   background-color: #4d5ae5;
   margin: 0 auto;
-
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .but:hover,
 .but:focus {
@@ -190,6 +201,7 @@ img {
 
 .header-class {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .nav {
@@ -201,6 +213,7 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
+
 }
 .adres_ul {
   display: flex;
