--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,23 @@ a {
   letter-spacing: 0.02em;
   color: #2e2f42;
   padding: 24px 0;
+  color: #404bbf;
   position: relative;
+ 
+  .link_ ::after{
+    content: "";
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+  }
+
 }
 .link_:hover,
 .link_:focus {
