--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,7 @@ a {
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   flex-basis: calc((100% - 72px) / 4);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08)
 }
 
 .team_ul {
@@ -327,4 +328,28 @@ img {
   border: 1px solid #8e8f99;
   margin-bottom: 8px;
 
+}
+.social{
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+.social_li{
+  width: 40px;
+  height: 40px;
+}
+.social_link{
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social_link:hover{
+  background-color: #404bbf;
+}
+.social_link_:focus{
+  background-color: #404bbf;
 }
