--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@ ol {
 }
 .header-inside {
   display: flex;
+  
 }
 a {
   text-decoration: none;
@@ -26,6 +27,7 @@ a {
   max-width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
+  
 }
 
 .logo {
@@ -284,7 +286,41 @@ img {
 .portfolio-li {
   text-decoration: none;
   list-style-type: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.portfolio-li:hover{
+
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-p:hover{
+  transform: translateY(0%);
+}
+
+.portfolio-img {
+ position: relative;
+ overflow: hidden;
+}
+.port-p {
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #4D5AE5;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
+    padding: 40px 32px;
+    transform: translateY(100%);
+    opacity: 0;
+
+}
+
 .portfolio-text-container {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -346,10 +382,12 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social_link:hover{
+.social_link:hover,.social_link_:focus{
   background-color: #404bbf;
 }
-.social_link_:focus{
-  background-color: #404bbf;
+
+.team_svg{
+  fill: #f4f4fd;
 }
