--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ a {
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -294,8 +294,10 @@ img {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
-.portfolio-p:hover{
+
+.portfolio-li:hover .port-p {
   transform: translateY(0%);
+  opacity: 1;
 }
 
 .portfolio-img {
@@ -384,7 +386,7 @@ img {
   justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social_link:hover,.social_link_:focus{
+.social_link:hover,.social_link:focus{
   background-color: #404bbf;
 }
 
