--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,7 @@ a {
   text-transform: uppercase;
   color: #4d5ae5;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
   
 }
