--- a/css/styles.css
+++ b/css/styles.css
@@ -420,6 +420,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 
 }
 .fot-sosyal-link:hover,.fot-sosyal-link:focus{
