--- a/css/styles.css
+++ b/css/styles.css
@@ -191,30 +191,7 @@ a {
 }
 }
 
-.footer-logo-second {
-  color: #f4f4fd;
-}
-.footer_logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #4d5ae5;
-  margin-bottom: 16px;
-  display: inline-block;
-}
-.footer {
-  background-color: #2e2f42;
-  padding: 100px 0;
-}
 
-.footer_text {
-  line-height: 1.5;
-  color: #f4f4fd;
-  letter-spacing: 0.02em;
-  max-width: 264px;
 }
 img {
   display: block;
@@ -395,45 +372,97 @@ img {
 .team_svg{
   fill: #f4f4fd;
 }
-.fot-spsyal-p{
-  font-weight: 500;
+
+.footer {
+    background-color: #2e2f42;  
+    min-height: 312px;
+    padding: 100px 0;
+}
+
+.container-footer{
+    /*margin:0 auto;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 15px;*/
+    display: flex;
+    align-items: baseline;
+    /*gap:120px;*/
+}
+
+.footer-logo-container{
+    margin-right: 120px;
+}
+.logo-footer {
+    font-family: "Raleway", sans-serif;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 1.17;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        margin-bottom: 16px;
+        color: #4d5ae5;
+        display: inline-block;
+        
+        
+
+}
+
+.logo-text-footer {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color:#f4f4fd;
+    text-transform: uppercase;
+
+}
+
+.footer-p {
+  max-width: 264px;
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color:#ffffff;
-  margin-bottom: 16px;
-
-}
-.fot-sosyal-ul{
-  display: flex;
-  gap: 16px;
-}
-.fot-sosyal-li{
-  width: 40px;
-  height: 40px;
-}
-.fot-sosyal-link{
-  width: 100%;
-  height: 100%;
-  background-color: #4d5ae5;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-
-}
-.fot-sosyal-link:hover,.fot-sosyal-link:focus{
-  background-color: #31d0aa;
-}
-.fot-sosyal-svg{
-  fill: #f4f4fd;
+  color:#f4f4fd;
 }
 
-.container-fot{
-  display: flex;
-  align-items: baseline;
+.footer-icon p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:#FFF;
+    margin-bottom: 16px;
 }
-.footer-div{
-  margin-right: 120px;  
+
+.footer-list-icons{
+    display: flex;
+    gap: 16px;
+}
+
+.footer-item-icon{
+width: 40px;
+height: 40px;
+}
+
+.footer-link-icon{
+    width: 100%;
+    height: 100%;
+    background-color:#4d5ae5;
+    border-radius:50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.footer-link-icon:focus,
+.footer-link-icon:hover {
+    background-color:#31d0aa;
+}
+
+.iconka{
+    fill:#f4f4fd;
 }
